// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render ConsentAndStartForm With consent checkbox 1`] = `
<div>
  <div
    class="survey-section__button-agreement"
  >
    <input
      class="_input-checkbox"
      id="surveyConsent"
      type="checkbox"
      value="agree"
    />
    <label
      for="surveyConsent"
    >
      <span>
        I agree
      </span>
    </label>
    <div
      class="center"
    >
      <button
        class="survey-section__button button green large"
        type="button"
      >
        survey:homepage:start
      </button>
    </div>
  </div>
</div>
`;

exports[`Render ConsentAndStartForm Without consent checkbox 1`] = `
<div>
  <div
    class="survey-section__button-agreement"
  >
    <div
      class="center"
    >
      <button
        class="survey-section__button button green large"
        type="button"
      >
        survey:homepage:start
      </button>
    </div>
  </div>
</div>
`;
